Initial functioning import.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=vcs
 logging.level.org.apache=ERROR
 logging.level.kafka=ERROR
+
+server.port=8443
+security.basic.enabled=false
+management.security.enabled=false
+security.ignored=/**
